# a_stream

./: .gitignore  CMakeLists.txt  clean.sh  client.c  common.c  common.h  console.c  console.h  draft_play.c  messages.h  net.c  net.h  player.c  server.c  sound.c  sound.h
client/: CMakeLists.txt  client.c  codec.c  codec.h  config.h  handlers.c  handlers.h  messages.h  net.c  net.h  sound.c  sound.h
server/: CMakeLists.txt  net.c  net.h  server.c
